--- a/light_fast_config.toml
+++ b/light_fast_config.toml
@@ -34,6 +34,8 @@ origins = ["*"]
 hosts = ["all"]
 # Only selected APIs will be exposed over this interface.
 apis = ["web3", "eth", "pubsub", "net", "parity", "parity_pubsub", "shh", "shh_pubsub", "personal", "parity_accounts", "traces", "signer", "parity_set", "secretstore", "rpc"]
+# JSON-RPC over WebSockets will be accessible on port 8546.
+port = 8546
 
 [ipc]
 # You won't be able to use IPC to interact with Parity.
