build: set fast mode and light footprint

--- a/light_fast_config.toml
+++ b/light_fast_config.toml
@@ -14,18 +14,24 @@ no_download = true
 base_path = "."
 # You will be identified as 'SpaceElephant' amongst other nodes..
 identity = "SpaceElephant"
+# Disable light mode
+light = "false"
 
 [network]
 # Parity will listen for connections on port 30305.
 port = 30305
 # Disable serving light peers.
 no_serve_light = true
+# Start syncing from the snapshot over the network.
+warp = true
 
 [rpc]
 # You won't be able to interact with Parity using JSON-RPC over HTTP.
 disable = true
 
 [websockets]
+# JSON-RPC over WebSockets will be accessible on port 8080.
+port = 8080
 #  JSON-RPC will be listening for connections on IP all.
 interface = "all"
 # Allows connecting from Origin '*'.
@@ -34,8 +40,6 @@ origins = ["*"]
 hosts = ["all"]
 # Only selected APIs will be exposed over this interface.
 apis = ["web3", "eth", "pubsub", "net", "parity", "parity_pubsub", "shh", "shh_pubsub", "personal", "parity_accounts", "traces", "signer", "parity_set", "secretstore", "rpc"]
-# JSON-RPC over WebSockets will be accessible on port 8080.
-port = 8080
 
 [ipc]
 # You won't be able to use IPC to interact with Parity.
@@ -54,12 +58,18 @@ disable = true
 tracing = "off"
 # Prune old state data. Maintains journal overlay - fast but extra 50MB of memory used.
 pruning = "fast"
-# Will keep up to 32 old state entries.
-pruning_history = 32
+# Will keep up to 8 old state entries.
+pruning_history = 8
+# Will keep up to 32 MB old state entries.
+pruning_memory = 32
 # Disable Fat DB.
 fat_db = "off"
 # Will keep up to 64MB data in Database cache.
 cache_size_db = 64
+# Significant speed up but unclean exit is unrecoverable (disables DB WAL).
+fast_and_loose = true
+
+db_compaction = "ssd"
 
 [snapshots]
 # Disables automatic periodic snapshots.
