fix: set parity.light as boolean

--- a/light_fast_config.toml
+++ b/light_fast_config.toml
@@ -15,7 +15,7 @@ base_path = "."
 # You will be identified as 'SpaceElephant' amongst other nodes..
 identity = "SpaceElephant"
 # Disable light mode
-light = "false"
+light = false
 
 [network]
 # Parity will listen for connections on port 30305.
